--- a/test-infra/configs/vpp-startup-docker.conf
+++ b/test-infra/configs/vpp-startup-docker.conf
@@ -3,7 +3,7 @@ unix {
   log /var/log/vpp/vpp.log
   full-coredump
   cli-listen /run/vpp/cli.sock
-  cli-prompt osvbng-vpp#
+  cli-prompt osvbng#
   cli-no-pager
   poll-sleep-usec 100
   startup-config /etc/vpp/bootstrap.vpp.gen
