Cleanedup loads of docker related build, normalized dataplane integration, cleaned up some code

--- a/test-infra/configs/dataplane.conf
+++ b/test-infra/configs/dataplane.conf
@@ -1,12 +1,15 @@
 unix {
   interactive
-  log /var/log/vpp/vpp.log
+  log /var/log/osvbng/dataplane.log
   full-coredump
-  cli-listen /run/vpp/cli.sock
+  cli-listen /run/osvbng/cli.sock
   cli-prompt osvbng#
   cli-no-pager
   poll-sleep-usec 100
-  startup-config /etc/vpp/bootstrap.vpp.gen
+}
+
+socksvr {
+  socket-name /run/osvbng/dataplane_api.sock
 }
 
 api-trace {
@@ -19,7 +22,7 @@ memory {
 }
 
 api-segment {
-  gid vpp
+  gid osvbng
 }
 
 cpu {
@@ -59,7 +62,7 @@ linux-cp {
 }
 
 punt {
-  socket /run/vpp/punt.sock
+  socket /run/osvbng/punt.sock
 }
 
 statseg {
