--- a/versions.env
+++ b/versions.env
@@ -1,5 +1,4 @@
 # Component versions for osvbng builds
-VPP_VERSION=25.10-release
-FRR_VERSION=10.2.1
-GOLANG_VERSION=1.24
-DEBIAN_VERSION=12
+export DATAPLANE_VERSION=25.10-release
+export GOLANG_VERSION=1.24
+export DEBIAN_VERSION=12
