--- a/scripts/qemu/packer/http/preseed.cfg
+++ b/scripts/qemu/packer/http/preseed.cfg
@@ -27,8 +27,9 @@ d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 
-tasksel tasksel/first multiselect standard, ssh-server
+tasksel tasksel/first multiselect ssh-server
 
+d-i base-installer/install-recommends boolean false
 d-i pkgsel/include string openssh-server sudo wget curl cloud-init
 d-i pkgsel/upgrade select full-upgrade
 
