--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,8 +1,16 @@
 name: Publish Docker Image
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - 'v*'
+      - 'docker-v*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to build (e.g., v1.0.0)'
+        required: true
+        type: string
 
 env:
   REGISTRY: docker.io
@@ -24,16 +32,32 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
+      - name: Load versions
+        id: versions
+        run: |
+          source versions.env
+          echo "dataplane_version=${DATAPLANE_VERSION}" >> $GITHUB_OUTPUT
+          echo "golang_version=${GOLANG_VERSION}" >> $GITHUB_OUTPUT
+
+      - name: Determine version
+        id: version
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            VERSION="${{ github.event.inputs.version }}"
+          else
+            VERSION="${GITHUB_REF#refs/tags/}"
+          fi
+          # Strip docker- prefix if present
+          VERSION="${VERSION#docker-}"
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+
       - uses: docker/metadata-action@v5
         id: meta
         with:
           images: ${{ env.IMAGE_NAME }}
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=raw,value=latest,enable=${{ github.event.release.prerelease == false }}
-            type=raw,value=pre-release,enable=${{ github.event.release.prerelease == true }}
+            type=raw,value=${{ steps.version.outputs.version }}
+            type=raw,value=latest
 
       - uses: docker/build-push-action@v5
         with:
@@ -43,8 +67,9 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            VERSION=${{ github.ref_name }}
+            VERSION=${{ steps.version.outputs.version }}
             COMMIT=${{ github.sha }}
-            DATE=${{ github.event.release.published_at }}
+            GOLANG_VERSION=${{ steps.versions.outputs.golang_version }}
+            DATAPLANE_VERSION=${{ steps.versions.outputs.dataplane_version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
