--- a/test-infra/configs/dataplane.conf
+++ b/test-infra/configs/dataplane.conf
@@ -44,9 +44,9 @@ plugins {
   plugin arp_plugin.so { disable }
   plugin rd_cp_plugin.so { disable }
   plugin igmp_plugin.so { disable }
-  plugin v6n_osvbng_arp_punt_plugin.so { enable }
-  plugin v6n_osvbng_fib_control_plugin.so { enable }
-  plugin v6n_osvbng_accounting_plugin.so { enable }
+  plugin osvbng_punt_plugin.so { enable }
+  plugin fib_control_plugin.so { enable }
+  plugin osvbng_accounting_plugin.so { enable }
 }
 
 logging {
@@ -59,10 +59,6 @@ linux-cp {
   lcp-auto-subint
   del-static-on-link-down
   del-dynamic-on-link-down
-}
-
-punt {
-  socket /run/osvbng/punt.sock
 }
 
 statseg {
