feat(mpls): configure dev environment for MPLS/LDP testing

--- a/docker/dev/Dockerfile.frr-peer
+++ b/docker/dev/Dockerfile.frr-peer
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     lsb-release \
     iproute2 \
     iputils-ping \
+    procps \
     && rm -rf /var/lib/apt/lists/*
 
 RUN curl -s https://deb.frrouting.org/frr/keys.gpg | tee /usr/share/keyrings/frrouting.gpg > /dev/null \
