--- a/docker/dev/frr-peer/frr.conf
+++ b/docker/dev/frr-peer/frr.conf
@@ -7,6 +7,7 @@ no ipv6 forwarding
 interface eth0
  ip address 10.0.0.2/30
  ipv6 address 2001:db8:c0:e::2/64
+ mpls enable
  ip router isis osvbng-isis
  ipv6 router isis osvbng-isis
  isis circuit-type level-2-only
@@ -47,6 +48,13 @@ router isis osvbng-isis
  is-type level-2-only
  metric-style wide
  log-adjacency-changes
+!
+mpls ldp
+ router-id 10.0.0.10
+ address-family ipv4
+  discovery transport-address 10.0.0.10
+  interface eth0
+ exit-address-family
 !
 line vty
 !
