fix(mpls): use vtysh-compatible config format in frr-peer frr.conf

--- a/docker/dev/frr-peer/frr.conf
+++ b/docker/dev/frr-peer/frr.conf
@@ -2,6 +2,7 @@ frr version 10
 frr defaults traditional
 hostname frr-peer
 log syslog informational
+service integrated-vtysh-config
 no ipv6 forwarding
 !
 interface eth0
@@ -16,6 +17,7 @@ interface eth0
  ip ospf network point-to-point
  ipv6 ospf6 area 0.0.0.0
  ipv6 ospf6 network point-to-point
+exit
 !
 interface lo
  ip address 10.0.0.10/32
@@ -25,6 +27,7 @@ interface lo
  isis passive
  ip ospf area 0.0.0.0
  ip ospf passive
+exit
 !
 router bgp 65001
  bgp router-id 10.0.0.10
@@ -34,27 +37,37 @@ router bgp 65001
   redistribute connected
   neighbor 10.0.0.1 activate
  exit-address-family
+exit
 !
 router ospf
  ospf router-id 10.0.0.10
  log-adjacency-changes
+exit
 !
 router ospf6
  ospf6 router-id 10.0.0.10
  log-adjacency-changes
+exit
+!
+mpls ldp
+ router-id 10.0.0.10
+ !
+ address-family ipv4
+  discovery transport-address 10.0.0.10
+  !
+  interface eth0
+  exit
+  !
+ exit-address-family
+ !
+exit
 !
 router isis osvbng-isis
  net 49.0001.0100.0000.0010.00
  is-type level-2-only
  metric-style wide
  log-adjacency-changes
-!
-mpls ldp
- router-id 10.0.0.10
- address-family ipv4
-  discovery transport-address 10.0.0.10
-  interface eth0
- exit-address-family
+exit
 !
 line vty
 !
