feat(dataplane): add LCP namespace support with interface MTU sync

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -52,9 +52,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    iputils-ping \
     iproute2 \
     libnuma1 \
     python3-minimal \
+    tcpdump \
     && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get purge -y curl gnupg lsb-release \
