--- a/docker/dev/Dockerfile.frr-peer
+++ b/docker/dev/Dockerfile.frr-peer
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     iproute2 \
     iputils-ping \
     procps \
+    tcpdump \
     && rm -rf /var/lib/apt/lists/*
 
 RUN curl -s https://deb.frrouting.org/frr/keys.gpg | tee /usr/share/keyrings/frrouting.gpg > /dev/null \
