feat(l3vpn): add L3VPN dev environment with loopback-based peering

--- a/docker/dev/frr-peer/frr.conf
+++ b/docker/dev/frr-peer/frr.conf
@@ -5,6 +5,9 @@ log syslog informational
 service integrated-vtysh-config
 no ipv6 forwarding
 !
+vrf CUSTOMER-A
+ exit-vrf
+!
 interface eth0
  ip address 10.0.0.2/30
  ipv6 address 2001:db8:c0:e::2/64
@@ -16,37 +19,52 @@ interface eth0
 exit
 !
 interface lo
- ip address 10.0.0.10/32
+ ip address 10.254.0.2/32
  ipv6 address 2001:db8:ff::1/128
  ip ospf area 0.0.0.0
  ip ospf passive
 exit
 !
-router bgp 65001
- bgp router-id 10.0.0.10
- neighbor 10.0.0.1 remote-as 65000
+router bgp 65000
+ bgp router-id 10.254.0.2
+ no bgp default ipv4-unicast
+ neighbor 10.254.0.1 remote-as internal
+ neighbor 10.254.0.1 update-source lo
+ !
+ address-family ipv4 vpn
+  neighbor 10.254.0.1 activate
+  neighbor 10.254.0.1 send-community both
+ exit-address-family
+exit
+!
+router bgp 65000 vrf CUSTOMER-A
  !
  address-family ipv4 unicast
   redistribute connected
-  neighbor 10.0.0.1 activate
+  rd vpn export 65000:200
+  rt vpn import 65000:100
+  rt vpn export 65000:100
+  label vpn export auto
+  export vpn
+  import vpn
  exit-address-family
 exit
 !
 router ospf
- ospf router-id 10.0.0.10
+ ospf router-id 10.254.0.2
  log-adjacency-changes
 exit
 !
 router ospf6
- ospf6 router-id 10.0.0.10
+ ospf6 router-id 10.254.0.2
  log-adjacency-changes
 exit
 !
 mpls ldp
- router-id 10.0.0.10
+ router-id 10.254.0.2
  !
  address-family ipv4
-  discovery transport-address 10.0.0.10
+  discovery transport-address 10.254.0.2
   !
   interface eth0
   exit
