--- a/docker/dev/osvbng.yaml
+++ b/docker/dev/osvbng.yaml
@@ -14,50 +14,65 @@ vrfs:
       ipv4-unicast: {}
       ipv6-unicast: {}
 
+service-groups:
+    customer-a:
+        vrf: CUSTOMER-A
+        unnumbered: loop101
+
 subscriber-groups:
     groups:
         default:
+            access-type: ipoe
             vrf: cgnat
+            ipv4-profile: default
+            ipv6-profile: default-v6
             vlans:
                 - svlan: "100-110"
                   cvlan: any
                   interface: loop100
-            address-pools:
-                - name: subscriber-pool
-                  network: 10.255.0.0/16
-                  gateway: 10.255.0.1
-                  dns:
-                    - 8.8.8.8
-                    - 8.8.4.4
-                  priority: 1
-            iana-pool: wan-link-pool
-            pd-pool: subscriber-pd-pool
-            dhcp:
-                auto-generate: true
-                lease-time: "3600"
             bgp:
                 enabled: true
                 advertise-pools: true
                 redistribute-connected: true
             aaa-policy: default-policy
+
+ipv4-profiles:
+    default:
+        gateway: 10.255.0.1
+        dns:
+            - 8.8.8.8
+            - 8.8.4.4
+        pools:
+            - name: subscriber-pool
+              network: 10.255.0.0/16
+        dhcp:
+            lease-time: 3600
+
+ipv6-profiles:
+    default-v6:
+        iana-pools:
+            - name: wan-link-pool
+              network: 2001:db8:0:1::/64
+              range_start: 2001:db8:0:1::1000
+              range_end: 2001:db8:0:1::ffff
+              gateway: 2001:db8:0:1::1
+              preferred_time: 3600
+              valid_time: 7200
+        pd-pools:
+            - name: subscriber-pd-pool
+              network: 2001:db8:100::/40
+              prefix_length: 56
+              preferred_time: 3600
+              valid_time: 7200
+        dns:
+            - 2001:4860:4860::8888
+            - 2001:4860:4860::8844
+
 dhcp:
     provider: local
+
 dhcpv6:
     provider: local
-    iana_pools:
-        - name: wan-link-pool
-          network: 2001:db8:0:1::/64
-          range_start: 2001:db8:0:1::1000
-          range_end: 2001:db8:0:1::ffff
-          gateway: 2001:db8:0:1::1
-          preferred_time: 3600
-          valid_time: 7200
-    pd_pools:
-        - name: subscriber-pd-pool
-          network: 2001:db8:100::/40
-          prefix_length: 56
-          preferred_time: 3600
-          valid_time: 7200
     dns_servers:
         - 2001:4860:4860::8888
         - 2001:4860:4860::8844
