--- a/docker/dev/frr-peer/frr.conf
+++ b/docker/dev/frr-peer/frr.conf
@@ -31,6 +31,10 @@ router bgp 65000
  neighbor 10.254.0.1 remote-as internal
  neighbor 10.254.0.1 update-source lo
  !
+ address-family ipv4 unicast
+  neighbor 10.254.0.1 activate
+ exit-address-family
+ !
  address-family ipv4 vpn
   neighbor 10.254.0.1 activate
   neighbor 10.254.0.1 send-community both
